--- a/storage/org/0/03/033/0338c2c4fd05842af010ca890499f04231ebabd17a8efee5c386603fafae8117.org
+++ b/storage/org/0/03/033/0338c2c4fd05842af010ca890499f04231ebabd17a8efee5c386603fafae8117.org
@@ -4,11 +4,16 @@
 
 * たましいのよるところ
 
-ある形にあこがれた
-わたしとある形による系は安定していた。
-ふとしたきっかけにわたしはその形をとりこんだ。
-いままでもそうであったかのようだった。
-わたしのかけたところにそれはきれいにおさまった。
+かつてあるかたちにあこがれていた
 
-たましいのよるところはわたしのなかに。
-わたしのたましいのよるところはなくなった。
+わたしとかたちのかかわりはあんていしていたが
+
+あるときわたしはそのかたちをとりこんだ
+
+いままでもそうであったかのように
+
+わたしのかけたところにそれはきれいにおさまった
+
+たましいのよるところはわたしのなかに
+
+わたしのたましいのよるところはなくなった
